--- a/react-extension/public/manifest.json
+++ b/react-extension/public/manifest.json
@@ -22,7 +22,7 @@
     }
   },
 
-  "permissions": ["tabs", "activeTab", "scripting", "storage"],
+  "permissions": ["tabs", "tabCapture", "activeTab", "scripting", "storage"],
 
   "icons": {
     "16": "favicon.ico",
