--- a/react-extension/package.json
+++ b/react-extension/package.json
@@ -13,13 +13,13 @@
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.1",
     "clsx": "^2.1.1",
+    "compressorjs": "^1.2.1",
     "framer-motion": "^11.11.9",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-scripts": "^5.0.1",
     "react-toastify": "^10.0.6",
     "tailwind-merge": "^2.5.4",
-    "typescript": "^5.6.3",
     "web-vitals": "^2.1.4",
     "workbox-background-sync": "^6.6.0",
     "workbox-broadcast-update": "^6.6.0",
