--- a/FastAPI/requirements.txt
+++ b/FastAPI/requirements.txt
@@ -1,6 +1,7 @@
 aiofiles==23.2.1
 annotated-types==0.7.0
 anyio==4.4.0
+av==13.1.0
 bcrypt==4.1.3
 certifi==2024.2.2
 charset-normalizer==3.3.2
@@ -12,12 +13,13 @@ ecdsa==0.19.0
 email_validator==2.1.1
 fastapi==0.111.0
 fastapi-cli==0.0.4
+ffmpeg==1.4
 geojson==2.5.0
 gunicorn==23.0.0
 h11==0.14.0
 httpcore==1.0.5
 httptools==0.6.1
-httpx==0.27.0
+httpx==0.27.2
 idna==3.7
 importlib_resources==6.4.0
 Jinja2==3.1.4
@@ -32,9 +34,12 @@ passlib==1.7.4
 pillow==10.4.0
 psycopg2==2.9.9
 pyasn1==0.6.0
-pydantic==2.7.2
-pydantic_core==2.18.3
+PyAudio==0.2.14
+pydantic==2.9.2
+pydantic_core==2.23.4
+pydub==0.25.1
 Pygments==2.18.0
+pyneuphonic==1.1.3
 PySocks==1.7.1
 python-dotenv==1.0.1
 python-jose==3.3.0
