--- a/react-extension/public/manifest.json
+++ b/react-extension/public/manifest.json
@@ -15,11 +15,7 @@
     "service_worker": "background.js"
   },
   "permissions": [
-    "tabs",
-    "tabCapture",
-    "activeTab",
-    "scripting",
-    "storage"
+    "tabs"
   ],
   "icons": {
     "16": "assets/logo16.png",
