--- a/react-extension/src/config.json
+++ b/react-extension/src/config.json
@@ -1,3 +1,4 @@
 {
-    "BASE_URL": "https://aiscreenreader.onrender.com"
+    "BASE_URL": "http://localhost:8000",
+    "BASE_URL2": "https://aiscreenreader.onrender.com"
 }
