--- a/FastAPI/requirements.txt
+++ b/FastAPI/requirements.txt
@@ -49,6 +49,8 @@ rich==13.7.1
 rsa==4.9
 shellingham==1.5.4
 six==1.16.0
+scikit-learn==1.5.2
+scipy==1.14.1
 slowapi==0.1.9
 sniffio==1.3.1
 SQLAlchemy==2.0.30
@@ -57,7 +59,6 @@ tqdm==4.66.4
 typer==0.12.3
 typing_extensions==4.12.0
 ujson==5.10.0
-uk-postcode-utils==1.1
 urllib3==2.2.1
 uvicorn==0.30.0
 uvloop==0.19.0
