--- a/FastAPI/requirements.txt
+++ b/FastAPI/requirements.txt
@@ -51,6 +51,7 @@ shellingham==1.5.4
 six==1.16.0
 scikit-learn==1.5.2
 scipy==1.14.1
+sentence-transformers==3.3.0
 slowapi==0.1.9
 sniffio==1.3.1
 SQLAlchemy==2.0.30
