--- a/react-extension/src/config.json
+++ b/react-extension/src/config.json
@@ -1,5 +1,5 @@
 {
-    "BASE_URL": "https://aiscreenreader.onrender.com",
+    "BASE_URL": "https://backend-gateway-zyu0.onrender.com/in-sight",
     "BASE_URL2": "http://localhost:8000"
 
 }
